Bug 692280 - Incorrect ToUnicode CMap when the input is a PDF with a 2-byte ToUnicode
Summary: Incorrect ToUnicode CMap when the input is a PDF with a 2-byte ToUnicode
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: master
Hardware: PC Windows Vista
: P4 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-15 18:33 UTC by Ken Sharp
Modified: 2011-11-25 04:26 UTC (History)
0 users

See Also:
Customer: 170
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ken Sharp 2011-06-15 18:33:37 UTC
When presented with an input file which has a 2-byte ToUnicode CMap pdfwrite only emits a 1-byte ToUnicode CMap, and only containing those character codes which are valid for one byte.

The problem is that we don't treat Type 0 fonts the same as CIDFonts (for ToUnicode), instead we handle them as type 1, which can only have 256 entries
Comment 1 Ken Sharp 2011-06-15 19:46:12 UTC
Fixed in revision 16696ae, patch here:

http://ghostscript.com/pipermail/gs-cvs/2011-June/013005.html