(pdfwrite) Bug #692280 "Incorrect ToUnicode CMap when the input is a PDF with a 2-byte ToUnicode"

The code was handling Type 0 fonts as if they were type 1, which meant a maximum
of 256 entries. Fixed by treating them as TrueType CIDFonts (2 byte codes, maximum
64K entries)

This may need later testing with more extensive collections of conts, we possibly should treat them as regular CIDFotns.